# tinfo

./: .gitignore  Modelfile  README.md  README_compression_engine.md  README_compression_engine.md.compressed  SOP.md  WIP.md  check_memory.py  compress.py  convert_to_gguf.py  dense_context.txt  densify  generate_data_ollama.py  generate_dataset.py  graph_ingest.py  instructions.txt  memory_tool.py  openwebui-chat-compression.py  project_spec.md  pyproject.toml  recall.py  requirements.txt  save_merged.py  shorthand_lib.py  stream_compress.py  summary.txt  tinfo-parse.py  tinfo.py  train_shorthand.py
.crules/modes/: CODER.md  GIT_POLICY.md  MANAGER.md
.crules/tasks/done/: 001-package-structure.md  002-cli-version-flag.md  004-unit-tests.md  005-ci-github-actions.md  006-type-hints.md
.crules/tasks/wip/: 001-package-structure.md  002-cli-version-flag.md  003-gitignore-secrets-hardening.md  004-unit-tests.md  005-ci-github-actions.md  006-type-hints.md
.github/workflows/: ci.yml
src/shorthand_llm/: __init__.py  __main__.py  cli.py  compressor.py  graph_utils.py
src/tinfo/: __init__.py  cli.py
tests/: conftest.py  test_compressor.py  test_graph_utils.py
