[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tinfo"
version = "0.2.0"
description = "A tool for analyzing text files and directories, providing statistics about tokens, characters, words, and lines."
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tinfo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7"
tiktoken = "^0.5.2"

[tool.poetry.scripts]
tinfo = "tinfo.cli:cli"

[project]
name = "tinfo"
version = "0.2.0"
description = "A tool for analyzing text files and directories, providing statistics about tokens, characters, words, and lines."
requires-python = ">=3.7"
dependencies = ["tiktoken>=0.5.2"]
